# notes

./: .clang-format  .gitignore  .prettierignore  CLAUDE.md  README.md  package.json
cpp/cpp_primer_g/: README.md
cpp/effective_cpp/: CMakeLists.txt  README.md  build.sh  clean.sh  run.sh
cpp/effective_cpp/item_1/: CMakeLists.txt  README.md  item_1.cpp
cpp/effective_cpp/item_2/: CMakeLists.txt  README.md  item_2.cpp
cpp/effective_cpp/items/item_1/: CMakeLists.txt  README.md  item_1.cpp
cpp/effective_cpp/items/item_10/: CMakeLists.txt  README.md  item_10.cpp
cpp/effective_cpp/items/item_2/: CMakeLists.txt  README.md  item_2.cpp
cpp/effective_cpp/items/item_3/: CMakeLists.txt  README.md  item_3.cpp
cpp/effective_cpp/items/item_4/: CMakeLists.txt  README.md  item_4.cpp
cpp/effective_cpp/items/item_5/: CMakeLists.txt  README.md  item_5.cpp
cpp/effective_cpp/items/item_6/: CMakeLists.txt  README.md  item_6.cpp
cpp/effective_cpp/items/item_7/: CMakeLists.txt  README.md  item_7.cpp
cpp/effective_cpp/items/item_8/: CMakeLists.txt  README.md  item_8.cpp
cpp/effective_cpp/items/item_9/: CMakeLists.txt  README.md  item_9.cpp
cpp/modern_cmake_for_cpp/: README.md
cpp/modern_cmake_for_cpp/chapter_01/: README.md
cpp/modern_cmake_for_cpp/chapter_02/: README.md  arguments.cmake  big_endian.cmake  commands.cmake  comments.cmake  condition.cmake  control.cmake  lists.cmake  loop.cmake  scope.cmake  variables.cmake
cpp/modern_cmake_for_cpp/chapter_04/: README.md
cpp/modern_cmake_for_cpp/chapter_05/: README.md
cpp/modern_cmake_for_cpp/chapter_05/custom_command/: CMakeLists.txt  main.cc
cpp/modern_cmake_for_cpp/chapter_05/custom_command/protos/: contact.proto
cpp/modern_cmake_for_cpp/chapter_05/custom_target/: CMakeLists.txt
cpp/modern_cmake_for_cpp/chapter_05/custom_target/cmake/: checksum.cmake  hello.cmake
cpp/modern_cmake_for_cpp/chapter_05/propagation/: CMakeLists.txt  main.cc
cpp/modern_cmake_for_cpp/chapter_05/propagation/cmake/: properties.cmake
cpp/modern_cmake_for_cpp/chapter_05/propagation/hello_lib/: CMakeLists.txt  hello.cc  hello.h
cpp/modern_cmake_for_cpp/chapter_05/propagation/printable_api/: CMakeLists.txt  printable_api.h
cpp/modern_cmake_for_cpp/chapter_06/: README.md
cpp/the_cpp_prog_lang/: README.md
dart/dart_language/: README.md
devops/nginx/: README.md
devops/nginx/build_from_source/: Dockerfile
devops/terraform_up_and_running/: README.md
devops/terraform_up_and_running/chapter_02/: README.md
devops/terraform_up_and_running/chapter_05/: README.md
effective_cpp/item_1/: README.md
entrepreneurship/zero_to_one/: README.md
frontend/css/css-the-definitive-guide/: 02_selectors.html  03_pseudo_class_and_element.html  README.md
frontend/react/: README.md
frontend/react/section_3/: README.md
javascript/eloquent_javascript/: README.md
kotlin/kotlin_in_action/: README.md  build.gradle.kts  settings.gradle.kts
ml/: .gitignore  pyproject.toml
ml/build_llm_from_scratch/: README.md
ml/build_llm_from_scratch/ch02_working_with_text_data/: The_Verdict.txt  embedding.ipynb  util.py
ml/build_llm_from_scratch/ch03_coding_attention_mechanisms/: attention.ipynb  attention_explained.ipynb  attention_explained_1.ipynb  attention_explained_2.ipynb  explain_util.py  util.py
ml/build_llm_from_scratch/ch04_gpt_model/: gpt_model.ipynb  util.py
ml/build_llm_from_scratch/ch05_pretraining/: pretraining.ipynb  util.py
protocols/oauth_2_in_action/: README.md
protocols/oauth_2_in_action/client-server-deprecated/: package.json
psychology/the_black_swan/: README.md
psychology/thinking_fast_and_slow/: README.md
scripts/: lint-terraform.sh
scripts/stdoutcmt/: .clang-format  CMakeLists.txt  build.sh  clean.sh  gencmt.sh  test.sh
scripts/stdoutcmt/include/stdoutcmt/cmt_modifier/: cpp.h  factory.h  interface.h
scripts/stdoutcmt/include/stdoutcmt/output_parser/: parser.h
scripts/stdoutcmt/include/stdoutcmt/src_copier/: common.h  factory.h  interface.h  modifier_wrapper.h
scripts/stdoutcmt/include/stdoutcmt/src_modifier/: cpp.h  factory.h  i_src_modifier.h  interface.h
scripts/stdoutcmt/include/stdoutcmt/src_parser/: cpp.h  factory.h  i_src_parser.h  interface.h
scripts/stdoutcmt/include/stdoutcmt/src_type/: src_type.h
scripts/stdoutcmt/include/stdoutcmt/util/: string.h  to_num.h  util.h
scripts/stdoutcmt/src/: main.cpp
scripts/stdoutcmt/tests/: CMakeLists.txt  unit_test.cpp
scripts/stdoutcmt/tests/data/unit_test/cmt_modifier/: cpp_001_input_src.txt  cpp_001_output.txt  cpp_002_input_cmt.json  cpp_002_input_src.txt  cpp_002_output.txt  cpp_003_input_src.txt  cpp_003_output.txt  cpp_004_input_cmt.json  cpp_004_input_src.txt  cpp_004_output.txt  cpp_005_input_cmt.json  cpp_005_input_src.txt  cpp_005_output.txt  cpp_006_input_cmt.json  cpp_006_input_src.txt  cpp_006_output.txt
scripts/stdoutcmt/tests/data/unit_test/output_parsing/: unix_001_input.txt  unix_002_input.txt  unix_002_output.json  unix_003_input.txt  unix_003_output.json
scripts/stdoutcmt/tests/data/unit_test/src_parsing/: 001_input.txt  001_output.json  cpp_002_input.txt  cpp_002_output.json  cpp_003_input.txt  cpp_003_output.json  cpp_004_input.txt  cpp_004_output.json  cpp_005_input.txt  cpp_006_input.txt  cpp_006_output.json  cpp_007_input.txt  cpp_007_output.json  cpp_008_input.txt  cpp_008_output.json
scripts/stdoutcmt/tests/unit/: cmt_modify.cpp  output_parsing.cpp  src_parsing.cpp  utility.cpp
software_engineering/design_patterns/: CMakeLists.txt  README.md  run.sh
software_engineering/design_patterns/patterns/p01_abstract_factory/: CMakeLists.txt  README.md  abstract_factory.cc
software_engineering/design_patterns/patterns/p08_composite/: CMakeLists.txt  README.md  component.cc  component.h  main.cc
software_engineering/design_patterns/patterns/p16_iterator/: CMakeLists.txt  README.md  iterator.cc  iterator.h  p16_iterator.cc
software_engineering/oauth_2_in_action/: README.md
software_engineering/software_engineering_at_google/: README.md
swift/the_swift_programming_language/: README.md
(+211 files in other folders)
