[project]
name = "notes_ml"
version = "0.1.0"
description = "ML notes."
authors = [
  { name = "Shuyang Sun", email = "shuyangsun10@gmail.com" }
]
requires-python = ">=3.13.0"
dependencies = [
  "bidict>=0.23.1",
  "jupyterlab>=4.4.6",
  "matplotlib>=3.10.5",
  "numpy>=2.3.2",
  "tiktoken>=0.11.0",
  "torch>=2.8.0",
]
